--- a/flask_tutorial/templates/search_results.html
+++ b/flask_tutorial/templates/search_results.html
@@ -1,8 +1,10 @@
+{%extends 'layout.html'%}
+
 <!doctype html>
 <html>
    <body>
    
-      <h1>Hello {{ name }}!</h1>
+      <h1>Hello {{ user }}!</h1>
       
    </body>
 </html>
