--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -3,8 +3,8 @@
 <!doctype html>
 <html>
    <body>
-   
+      {% block main %}
       <h1>Hello {{ user }}!</h1>
-      
+      {% endblock%}
    </body>
 </html>
