--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -3,8 +3,16 @@
 <!doctype html>
 <html>
    <body>
+      {% block title %}
+      Results for {{ user }}
+      {% endblock %}
       {% block main %}
-      <h1>Hello {{ user }}!</h1>
-      {% endblock%}
+      <h1>The results for {{ user }} are as follows:</h1>
+      <table>
+         <th><td>Tweet</td><td>Result</td></th>
+         <tr><td>A</td><td>OK</td></tr>
+         <tr><td>B</td><td>Hateful</td></tr>
+      </table>
+      {% endblock %}
    </body>
 </html>
