--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -3,7 +3,7 @@
 <html>
    <body>
       {%block main%}
-      <div class='form-temp'>
+      <div class='form-style-8'>
          <h2>Enter your victim's info</h2>
          <form action = "http://localhost:5000/search_results" method = "POST">
             <p><label for="user">Username</label>              <input type = "text" name="user"/></p>
