--- a/static/styles.css
+++ b/static/styles.css
@@ -135,3 +135,30 @@ input {
       background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
       background-color:#34CACA;
   }
+
+  table, th, td {
+    border: 1px solid black;
+  }
+
+  #results {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #results td, #results th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #results tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #results tr:hover {background-color: #ddd;}
+  
+  #results th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+  }
