updated styling of table

--- a/static/styles.css
+++ b/static/styles.css
@@ -159,6 +159,6 @@ input {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #45D6D6;
     color: white;
   }
