--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -11,9 +11,22 @@
       {% endblock %}
 
       {% block main %}
-      <h1>The results for {{ user }} are as follows</h1>
-      <script sync src="https://platform.twitter.com/widgets.js"></script>
+      <h1>Results for <a href='https://www.twitter.com/{{ user }}/'>@{{ user }}</a></h1>
 
+      <!---GRAPH BEGINNING-->
+      <link rel="stylesheet" href="https://cdn.bokeh.org/bokeh/release/bokeh-0.12.14.min.css" type="text/css" />
+      <link rel="stylesheet" href="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-0.12.14.min.css" type="text/css" />
+      <link rel="stylesheet" href="https://cdn.bokeh.org/bokeh/release/bokeh-tables-0.12.14.min.css" type="text/css">
+      <div align=center>
+        {{ div | safe }}
+      </div>
+
+      <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-2.0.0.min.js" integrity="sha384-5Y+xuMRAbgBj/2WKUiL8yzV4fBFic1HJPo2hT3pq2IsEzbsJjj8kT2i0b1lZ7C2N" crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            Bokeh.set_log_level("info");
+        </script>
+      {{ script | safe }}
+      <!--GRAPH END-->
 
       <!-- The embedder function will append tweets to this div element
       <div id='tweets'></div>
