--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -26,6 +26,7 @@
             Bokeh.set_log_level("info");
         </script>
       {{ script | safe }}
+
       <!--GRAPH END-->
 
       <!-- The embedder function will append tweets to this div element
@@ -66,14 +67,16 @@ Possibly add this json function to a seperate json script
 });
 </script> -->
 
-      <div id='results'>
+
          <!--TODO Replace Table with appropriate code-->
-         <table align="center">
-            <th>
+         <table id="results" align="center">
+           <tr>
+              <td>Index</td>
               <td>Tweet</td>
               <td>Link</td>
-              <td>Result</td>
-            </th>
+              <th onclick="sortTable(3)">Result</th>
+            </tr>
+
 
             {%for i, tweet, url, results in tweet_list%}
             <tr>
@@ -85,7 +88,66 @@ Possibly add this json function to a seperate json script
             {%endfor%}
 
          </table>
-      </div>
-      {% endblock %}
+
+      <!--- Table sorting --->
+  <script>
+  function sortTable(n) {
+    var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+    table = document.getElementById("results");
+    switching = true;
+    // Set the sorting direction to ascending:
+    dir = "asc";
+    /* Make a loop that will continue until
+    no switching has been done: */
+    while (switching) {
+      // Start by saying: no switching is done:
+      switching = false;
+      rows = table.rows;
+      /* Loop through all table rows (except the
+      first, which contains table headers): */
+      for (i = 1; i < (rows.length - 1); i++) {
+        // Start by saying there should be no switching:
+        shouldSwitch = false;
+        /* Get the two elements you want to compare,
+        one from current row and one from the next: */
+        x = rows[i].getElementsByTagName("TD")[n];
+        y = rows[i + 1].getElementsByTagName("TD")[n];
+        /* Check if the two rows should switch place,
+        based on the direction, asc or desc: */
+        if (dir == "asc") {
+          if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+            // If so, mark as a switch and break the loop:
+            shouldSwitch = true;
+            break;
+          }
+        } else if (dir == "desc") {
+          if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+            // If so, mark as a switch and break the loop:
+            shouldSwitch = true;
+            break;
+          }
+        }
+      }
+      if (shouldSwitch) {
+        /* If a switch has been marked, make the switch
+        and mark that a switch has been done: */
+        rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+        switching = true;
+        // Each time a switch is done, increase this count by 1:
+        switchcount ++;
+      } else {
+        /* If no switching has been done AND the direction is "asc",
+        set the direction to "desc" and run the while loop again. */
+        if (switchcount == 0 && dir == "asc") {
+          dir = "desc";
+          switching = true;
+        }
+      }
+    }
+  }
+  </script>
+
+  {% endblock %}
+
    </body>
 </html>
