de-memefied 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,11 +7,8 @@
       {%endblock%}
 
       {%block main%}
-         <h1>U wot m8</h1>
-         <iframe src="https://giphy.com/embed/lkdH8FmImcGoylv3t3" 
-         width="480" height="358" 
-         frameBorder="0" class="giphy-embed" 
-         allowFullScreen></iframe>
+         <h1>404 - No Tweets found</h1>
+         <h3>The username may not exist, or has not tweeted in the specified date range.</h3>
       {%endblock%}
    </body>
 </html>
