Added Legal Statement

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -64,7 +64,9 @@
         </main>
         
         <footer class="small text-center text-muted">
-           Legality mumbo jumbo goes here
+           The use of this application is permitted by Twitter Inc. for academic research purposes, per its
+           <a href = 'https://developer.twitter.com/en/developer-terms/agreement-and-policy'>Developer Agreement and Policy</a>,
+           under the subsection of <b>Content Redistribution</b>. Unauthorised use of this application is at the discretion of the user.
         </footer>
 
     </body>
