Added message on search results

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -12,6 +12,7 @@
 
       {% block main %}
       <h1>Results for <a href='https://www.twitter.com/{{ user }}/'>@{{ user }}</a></h1>
+      <h6>NB: The results below have varying degrees of confidence levels. The final decision on the classification of the tweet itself is left up to you.</h6>
 
       <!---GRAPH BEGINNING-->
       <link rel="stylesheet" href="https://cdn.bokeh.org/bokeh/release/bokeh-0.12.14.min.css" type="text/css" />
